financas-app/api-balance-service/kubernetes/deployment-green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: balance-app-green
  namespace: money-app
  labels:
    version: green
spec:
  replicas: 5
  selector:
    matchLabels:
      app: balance-app
      namespace: financas-app
  template:
    metadata:
      labels:
        app: balance-app
        namespace: financas-app
        version: green
    spec:
      containers:
        - name: balance-app
          image: wjcarrer/api-balance-service:green
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
