financas-app/api-balance-service/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-balance-service
  namespace: financas-app
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: api-balance-app
    namespace: financas-app
