financas-app/api-balance-service/kubernetes/destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: api-balance-service-rule
  namespace: financas-app
spec:
  host: api-balance-service
  subsets:
  - name: blue
    labels:
      version: blue
  - name: green
    labels:
      version: green
