financas-app/api-balance-service/kubernetes/green-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-balance-service-stage-green
  namespace: money-app
spec:
  gateways:
    - financas-app-gateway
  hosts:
    - "*"
  http:
    - match:
      - uri:
          prefix: /api-balance-service
      route:
      - destination:
          host: api-balance-service
          port:
            number: 8080
          subset: blue
        weight: 30
      - destination:
          host: api-balance-service
          port:
            number: 8080
          subset: green
        weight: 70
